# stardots

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  classstardots_1_1core_1_1IPlug-members.html  classstardots_1_1core_1_1IPlug.html  classstardots_1_1core_1_1IPlug.js  classstardots_1_1core_1_1Node-members.html  classstardots_1_1core_1_1Node.html  classstardots_1_1core_1_1Node.js  classstardots_1_1core_1_1NodeManager-members.html  classstardots_1_1core_1_1NodeManager.html  classstardots_1_1core_1_1NodeManager.js  classstardots_1_1core_1_1Plug-members.html  classstardots_1_1core_1_1Plug.html  classstardots_1_1core_1_1Plug.js  dir_40b8a3135eed3b3fd07badeb1a530777.html  dir_40b8a3135eed3b3fd07badeb1a530777.js  dir_7c37f96512080e0a4ce3f624aa3a8f8e.html  dir_7c37f96512080e0a4ce3f624aa3a8f8e.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  namespaces.html  namespaces_dup.js  namespacestardots.html  namespacestardots.js  namespacestardots_1_1core.html  (+16 more)
.github/workflows/: doxygen.yml
lib/: CMakeLists.txt
lib/stardots/: CMakeLists.txt  stardots.h
lib/stardots/core/: node.cpp  node.h  node_manager.cpp  node_manager.h  plug.h
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
tests/: CMakeLists.txt  node_test.cpp
tests/nodal_lib/: CMakeLists.txt  node_manager_test.cpp  node_test.cpp  plug_test.cpp
